[package]
name = "short"
version = "0.1.0"
authors = ["Graham King <graham@gkgk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = {version = "0.2", features = ["full"]}
serde = "1"
serde_derive = "1"
base-62 = "0.1.1"
http = "0.2"
reqwest = "0.10"
